Added song workshop.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   avatar_glow: 1.2.0
   icon_shadow: 1.0.1
   draggable_scrollbar: 0.0.4
+  pretty_json: 1.1.0
 
   flutter:
     sdk: flutter
