--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,31 +22,34 @@ environment:
 
 dependencies:
 
-  path_provider: 1.6.21
+  path_provider: 1.6.24
   provider: ^4.3.2+2
 
-  implicitly_animated_reorderable_list: 0.3.0
+  #implicitly_animated_reorderable_list: 0.3.2
   image_picker_web: 1.0.9
-  fluttertoast: 7.1.1
+  fluttertoast: 7.1.8
   image_picker: 0.6.7+12
-  file_picker_cross: 4.2.5
+  file_picker_cross: 4.2.6
   image: 2.1.18
   worker_manager: 3.0.3
-  material_design_icons_flutter: 4.0.5755
   linked_scroll_controller: 0.1.2
   auto_size_text: 2.1.0
   avatar_glow: 1.2.0
   icon_shadow: 1.0.1
   draggable_scrollbar: 0.0.4
   pretty_json: 1.1.0
-  flutter_mailer: 1.0.0
+  flutter_mailer: 1.0.1
   dio: ^3.0.10
-  connectivity: 2.0.0
+  connectivity: 2.0.2
   clipboard: 0.1.2+8
 
   harcapp_core:
     git:
       url: git://github.com/n3o2k7i8ch5/harcapp_core.git
+
+  harcapp_core_tags:
+    git:
+      url: git://github.com/n3o2k7i8ch5/harcapp_core_tags.git
 
   harcapp_core_song:
     git:
@@ -55,6 +58,10 @@ dependencies:
   harcapp_core_own_song:
     git:
       url: git://github.com/n3o2k7i8ch5/harcapp_core_own_song.git
+
+  harcapp_core_song_widget:
+    git:
+      url: git://github.com/n3o2k7i8ch5/harcapp_core_song_widget.git
 
   flutter:
     sdk: flutter
