--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,9 +23,8 @@ environment:
 dependencies:
 
   path_provider: 1.6.24
-  provider: ^4.3.2+2
+  provider: 5.0.0
 
-  #implicitly_animated_reorderable_list: 0.3.2
   image_picker_web: 1.0.9
   fluttertoast: 7.1.8
   image_picker: 0.6.7+12
@@ -34,7 +33,7 @@ dependencies:
   worker_manager: 3.0.3
   linked_scroll_controller: 0.1.2
   auto_size_text: 2.1.0
-  avatar_glow: 1.2.0
+  avatar_glow: 2.0.0
   icon_shadow: 1.0.1
   draggable_scrollbar: 0.0.4
   pretty_json: 1.1.0
