--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,22 +22,22 @@ environment:
 
 dependencies:
 
-  path_provider: 1.6.24
+  path_provider: ^2.0.2
   provider: 5.0.0
 
-  image_picker_web: 1.0.9
-  image_picker: 0.6.7+12
-  file_picker_cross: 4.2.6
-  image: 2.1.18
-  worker_manager: 3.0.3
+  image_picker_web: ^2.0.3
+  image_picker: ^0.8.0+3
+  file_picker_cross: ^4.4.2
+  image: ^3.0.2
+  worker_manager: ^4.0.1
   linked_scroll_controller: 0.1.2
   auto_size_text: 2.1.0
   icon_shadow: 1.0.1
-  draggable_scrollbar: 0.0.4
-  pretty_json: 1.1.0
-  flutter_mailer: 1.0.1
-  dio: ^3.0.10
-  clipboard: 0.1.2+8
+  draggable_scrollbar: ^0.1.0
+  pretty_json: ^2.0.0
+  flutter_mailer: ^2.0.0
+  dio: ^4.0.0
+  clipboard: ^0.1.3
 
   harcapp_core:
     git:
