--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,21 +18,19 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
 
   path_provider: ^2.0.2
-  provider: 5.0.0
+  provider: ^5.0.0
 
   image_picker_web: ^2.0.3
-  image_picker: ^0.8.0+3
+  image_picker: ^0.8.1+1
   file_picker_cross: ^4.4.2
   image: ^3.0.2
-  worker_manager: ^4.0.1
-  linked_scroll_controller: 0.1.2
-  auto_size_text: 2.1.0
-  icon_shadow: 1.0.1
+  worker_manager: ^4.0.2
+  #icon_shadow: 1.0.1
   draggable_scrollbar: ^0.1.0
   pretty_json: ^2.0.0
   flutter_mailer: ^2.0.0
@@ -67,7 +65,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
+  cupertino_icons: ^1.0.3
 
 dev_dependencies:
   flutter_test:
