--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.1+1
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
@@ -34,7 +34,7 @@ dependencies:
   draggable_scrollbar: ^0.1.0
   pretty_json: ^2.0.0
   flutter_mailer: ^2.0.0
-  dio: ^4.0.0
+  http: 0.13.3
   clipboard: ^0.1.3
 
   harcapp_core:
@@ -85,6 +85,7 @@ flutter:
   assets:
     - assets/
     - assets/images/
+    - assets/songs/
 
   fonts:
     - family: Gentium
