--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ environment:
 dependencies:
 
   path_provider: ^2.0.2
-  provider: ^5.0.0
+  provider: ^6.0.0
 
   image_picker_web: ^2.0.3
   image_picker: ^0.8.1+1
@@ -34,7 +34,7 @@ dependencies:
   draggable_scrollbar: ^0.1.0
   pretty_json: ^2.0.0
   flutter_mailer: ^2.0.0
-  http: 0.13.3
+  http: ^0.13.4
   clipboard: ^0.1.3
 
   harcapp_core:
