--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_mailer: ^2.0.0
   http: ^0.13.4
   clipboard: ^0.1.3
+  package_info_plus: ^1.0.6
 
   harcapp_core:
     git:
