--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,23 +40,23 @@ dependencies:
 
   harcapp_core:
     git:
-      url: git://github.com/n3o2k7i8ch5/harcapp_core.git
+      url: https://github.com/n3o2k7i8ch5/harcapp_core
 
   harcapp_core_tags:
     git:
-      url: git://github.com/n3o2k7i8ch5/harcapp_core_tags.git
+      url: https://github.com/n3o2k7i8ch5/harcapp_core_tags
 
   harcapp_core_song:
     git:
-      url: git://github.com/n3o2k7i8ch5/harcapp_core_song.git
-
-  harcapp_core_own_song:
-    git:
-      url: git://github.com/n3o2k7i8ch5/harcapp_core_own_song.git
+      url: https://github.com/n3o2k7i8ch5/harcapp_core_song
 
   harcapp_core_song_widget:
     git:
-      url: git://github.com/n3o2k7i8ch5/harcapp_core_song_widget.git
+      url: https://github.com/n3o2k7i8ch5/harcapp_core_song_widget
+
+  harcapp_core_own_song:
+    git:
+      url: https://github.com/n3o2k7i8ch5/harcapp_core_own_song
 
   flutter:
     sdk: flutter
