--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,10 +15,10 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.3+3
+version: 1.0.4+4
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.17.0 <3.0.0'
 
 dependencies:
 
@@ -28,6 +28,7 @@ dependencies:
   image_picker_web: ^2.0.3
   image_picker: ^0.8.1+1
   file_picker_cross: ^4.4.2
+  dropdown_button2: 1.6.3
   image: ^3.0.2
   worker_manager: ^4.0.2
   #icon_shadow: 1.0.1
