--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,11 +25,11 @@ dependencies:
   path_provider: ^2.0.2
   provider: ^6.0.0
 
-  image_picker_web: ^2.0.3
+  image_picker_web: ^3.0.0+1
   image_picker: ^0.8.1+1
   file_picker_cross: ^4.4.2
   dropdown_button2: ^1.7.2
-  image: ^3.0.2
+  image: ^4.0.5
   worker_manager: ^4.0.2
   draggable_scrollbar: ^0.1.0
   pretty_json: ^2.0.0
