--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,21 +22,21 @@ environment:
 
 dependencies:
 
-  path_provider: ^2.0.2
-  provider: ^6.0.0
-
-  image_picker_web: ^3.0.0+1
-  image_picker: ^0.8.1+1
-  file_picker_cross: ^4.4.2
-  dropdown_button2: ^1.7.2
-  image: ^4.0.5
-  worker_manager: ^4.0.2
+  clipboard: ^0.1.3
   draggable_scrollbar: ^0.1.0
-  pretty_json: ^2.0.0
+  dropdown_button2: ^2.0.0
+  file_picker_cross: ^4.4.2
   flutter_mailer: ^2.0.0
   http: ^0.13.4
-  clipboard: ^0.1.3
+  image: ^4.0.5
+  image_picker_web: ^3.0.0+1
+  image_picker: ^0.8.1+1
+  implicitly_animated_reorderable_list_2: 0.5.0
   package_info_plus: ^1.0.6
+  path_provider: ^2.0.2
+  pretty_json: ^2.0.0
+  provider: ^6.0.0
+  worker_manager: ^5.0.3
 
   harcapp_core:
     git:
