--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   image: ^4.0.5
   image_picker_web: ^3.0.0+1
   image_picker: ^0.8.1+1
-  implicitly_animated_reorderable_list_2: 0.5.0
+  implicitly_animated_reorderable_list_2: ^0.5.1
   package_info_plus: ^1.0.6
   path_provider: ^2.0.2
   pretty_json: ^2.0.0
