--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,24 +23,25 @@ environment:
 dependencies:
 
   clipboard: ^0.1.3
-  dio: 5.1.1
+  dio: ^5.2.1
   draggable_scrollbar: ^0.1.0
   dropdown_button2: ^2.0.0
-  file_picker_cross: ^4.4.2
+  # file_picker_cross: ^4.6.0
+  file_picker: 5.3.2
   flutter_mailer: ^2.0.0
-  go_router: 6.5.8
-  http: ^0.13.4
+  flutter_svg: ^2.0.6
+  go_router: ^8.0.1
+  http: ^1.0.0
   image: ^4.0.5
   image_picker_web: ^3.0.0+1
-  image_picker: ^0.8.1+1
   implicitly_animated_reorderable_list_2: ^0.5.1
-  package_info_plus: ^1.0.6
+  package_info_plus: ^4.0.2
   path_provider: ^2.0.2
   pretty_json: ^2.0.0
   provider: ^6.0.0
-  flutter_svg: 2.0.5
+  shared_preferences: ^2.1.2
   url_strategy: 0.2.0
-  worker_manager: ^5.0.3
+  worker_manager: ^6.0.3
 
   harcapp_core:
     git:
