--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.9+9
+version: 1.0.10+10
 
 environment:
   sdk: '>=2.17.0 <3.0.0'
@@ -27,15 +27,15 @@ dependencies:
   draggable_scrollbar: ^0.1.0
   dropdown_button2: ^2.0.0
   # file_picker_cross: ^4.6.0
-  file_picker: 5.3.2
+  file_picker: ^5.5.0
   flutter_mailer: ^2.0.0
   flutter_svg: ^2.0.6
-  go_router: ^8.0.1
+  go_router: ^11.1.3
   http: ^1.0.0
   image: ^4.0.5
   image_picker_web: ^3.0.0+1
   implicitly_animated_reorderable_list_2: ^0.5.1
-  package_info_plus: ^4.0.2
+  package_info_plus: ^5.0.0
   path_provider: ^2.0.2
   pretty_json: ^2.0.0
   provider: ^6.0.0
