--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.10+10
 
 environment:
-  sdk: '>=2.17.0 <3.0.0'
+  sdk: '>=3.2.2 <4.0.0'
 
 dependencies:
 
@@ -27,10 +27,11 @@ dependencies:
   draggable_scrollbar: ^0.1.0
   dropdown_button2: ^2.0.0
   # file_picker_cross: ^4.6.0
-  file_picker: ^5.5.0
+  file_picker: ^6.1.1
   flutter_mailer: ^2.0.0
   flutter_svg: ^2.0.6
-  go_router: ^11.1.3
+  go_router: ^13.0.0
+  google_fonts: ^6.1.0
   http: ^1.0.0
   image: ^4.0.5
   image_picker_web: ^3.0.0+1
@@ -46,22 +47,6 @@ dependencies:
   harcapp_core:
     git:
       url: https://github.com/n3o2k7i8ch5/harcapp_core
-
-  harcapp_core_tags:
-    git:
-      url: https://github.com/n3o2k7i8ch5/harcapp_core_tags
-
-  harcapp_core_song:
-    git:
-      url: https://github.com/n3o2k7i8ch5/harcapp_core_song
-
-  harcapp_core_song_widget:
-    git:
-      url: https://github.com/n3o2k7i8ch5/harcapp_core_song_widget
-
-  harcapp_core_own_song:
-    git:
-      url: https://github.com/n3o2k7i8ch5/harcapp_core_own_song
 
   flutter:
     sdk: flutter
@@ -91,6 +76,7 @@ flutter:
   assets:
     - assets/
     - assets/images/
+    - assets/images/screenshots/
     - assets/songs/
 
   fonts:
