--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: harcapp_web
-description: HarcAppka Web (Daniel Iwanicki).
+description: HarcApp Web (Daniel Iwanicki).
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
