--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,17 +26,17 @@ dependencies:
   dio: ^5.2.1
   draggable_scrollbar: ^0.1.0
   dropdown_button2: ^2.0.0
-  # file_picker_cross: ^4.6.0
-  file_picker: ^6.1.1
+  file_picker: ^8.0.0+1
   flutter_mailer: ^2.0.0
   flutter_svg: ^2.0.6
   go_router: ^13.0.0
   google_fonts: ^6.1.0
-  http: ^1.0.0
+  http: ^1.2.0
   image: ^4.0.5
   image_picker_web: ^3.0.0+1
   implicitly_animated_reorderable_list_2: ^0.5.1
-  package_info_plus: ^5.0.0
+  material_design_icons_flutter: ^7.0.7296
+  package_info_plus: ^6.0.0
   path_provider: ^2.0.2
   pretty_json: ^2.0.0
   provider: ^6.0.0
