--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,19 +28,19 @@ dependencies:
   dropdown_button2: ^2.0.0
   file_picker: ^8.0.0+1
   flutter_svg: ^2.0.6
-  go_router: ^13.0.0
+  go_router: ^14.2.3
   google_fonts: ^6.1.0
   http: ^1.2.0
   image: ^4.0.5
-  image_picker_web: ^3.0.0+1
+  image_picker_web: ^4.0.0
   implicitly_animated_reorderable_list_2: ^0.6.0
   material_design_icons_flutter: ^7.0.7296
-  package_info_plus: ^7.0.0
+  package_info_plus: ^8.0.1
   path_provider: ^2.0.2
   pretty_json: ^2.0.0
   provider: ^6.0.0
   shared_preferences: ^2.1.2
-  url_strategy: 0.2.0
+  url_strategy: ^0.3.0
   worker_manager: ^7.0.1
 
   harcapp_core:
