Fixed minor bugs

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   shared_preferences: ^2.1.2
   url_strategy: ^0.3.0
   worker_manager: ^7.0.1
+  youtube_player_flutter: ^9.1.1
 
   harcapp_core:
     git:
