--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'https://harcapp.web.app' # Remove this line if you wish to publish 
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.15+15
+version: 1.0.16+16
 
 environment:
   sdk: ^3.5.0
@@ -40,6 +40,7 @@ dependencies:
   pretty_json: ^2.0.0
   provider: ^6.0.0
   shared_preferences: ^2.1.2
+  smooth_scroll_multiplatform: ^1.0.8
   url_strategy: ^0.3.0
   worker_manager: ^7.0.1
   youtube_player_flutter: ^9.1.1
