--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,26 +23,29 @@ environment:
 dependencies:
 
   clipboard: ^0.1.3
-  dio: ^5.2.1
+  dio: ^5.8.0+1
   draggable_scrollbar: ^0.1.0
-  dropdown_button2: ^2.0.0
-  file_picker: ^8.0.0+1
-  flutter_svg: ^2.0.6
-  go_router: ^14.2.3
-  google_fonts: ^6.1.0
-  http: ^1.2.0
-  image: ^4.0.5
+  dropdown_button2: ^2.3.9
+  file_picker: ^8.3.1
+  flutter_svg: ^2.0.17
+  go_router: ^14.7.2
+  google_fonts: ^6.2.1
+  http: ^1.3.0
+  idb_shim: 2.6.1+7
+  image: ^4.5.2
   image_picker_web: ^4.0.0
   implicitly_animated_reorderable_list_2: ^0.6.0
+  localstorage: ^5.0.0
+  logger: ^2.5.0
   material_design_icons_flutter: ^7.0.7296
-  package_info_plus: ^8.0.1
-  path_provider: ^2.0.2
+  package_info_plus: ^8.1.4
+  path_provider: ^2.1.5
   pretty_json: ^2.0.0
-  provider: ^6.0.0
-  shared_preferences: ^2.1.2
+  provider: ^6.1.2
+  shared_preferences: ^2.5.1
   smooth_scroll_multiplatform: ^1.0.8
   url_strategy: ^0.3.0
-  worker_manager: ^7.0.1
+  worker_manager: ^7.2.2
   youtube_player_flutter: ^9.1.1
 
   harcapp_core:
@@ -55,9 +58,6 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.4
 
 dev_dependencies:
   flutter_test:
