--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   draggable_scrollbar: ^0.1.0
   dropdown_button2: ^2.3.9
   file_picker: ^8.3.1
+  flutter_spinkit: ^5.2.1
   flutter_svg: ^2.0.17
   go_router: ^14.7.2
   google_fonts: ^6.2.1
@@ -35,6 +36,7 @@ dependencies:
   image: ^4.5.2
   image_picker_web: ^4.0.0
   implicitly_animated_reorderable_list_2: ^0.6.0
+#  animated_reorderable_list: 1.1.5
   localstorage: ^5.0.0
   logger: ^2.5.0
   material_design_icons_flutter: ^7.0.7296
