--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   path_provider: ^2.1.5
   pretty_json: ^2.0.0
   provider: ^6.1.2
+  semaphore_plus: ^0.3.1
   shared_preferences: ^2.5.1
   smooth_scroll_multiplatform: ^1.0.8
   url_strategy: ^0.3.0
