--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'https://harcapp.web.app' # Remove this line if you wish to publish 
 version: 1.0.16+16
 
 environment:
-  sdk: ^3.5.0
+  sdk: ^3.7.2
 
 dependencies:
 
@@ -26,17 +26,17 @@ dependencies:
   dio: ^5.8.0+1
   draggable_scrollbar: ^0.1.0
   dropdown_button2: ^2.3.9
-  file_picker: ^8.3.1
+  file_picker: ^10.0.0
   flutter_spinkit: ^5.2.1
   flutter_svg: ^2.0.17
   go_router: ^14.7.2
   google_fonts: ^6.2.1
   http: ^1.3.0
-  idb_shim: 2.6.1+7
+  idb_shim: ^2.6.5+1
   image: ^4.5.2
   image_picker_web: ^4.0.0
   implicitly_animated_reorderable_list_2: ^0.6.0
-  localstorage: ^5.0.0
+  localstorage: ^6.0.0
   logger: ^2.5.0
   material_design_icons_flutter: ^7.0.7296
   package_info_plus: ^8.1.4
