--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ environment:
 
 dependencies:
 
+  animated_reorderable_list: ^1.3.0
   clipboard: ^2.0.2
   dio: ^5.8.0+1
   draggable_scrollbar: ^0.1.0
