--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,3 +1,4 @@
+
 name: harcapp_web
 description: HarcApp Web (Daniel Iwanicki).
 
@@ -43,6 +44,7 @@ dependencies:
   package_info_plus: ^8.1.4
   path_provider: ^2.1.5
   pretty_json: ^2.0.0
+  yaml: ^3.1.2
   provider: ^6.1.2
   semaphore_plus: ^0.3.1
   shared_preferences: ^2.5.1
