--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   flutter_svg: ^2.0.17
   go_router: ^17.0.0
   google_fonts: ^6.2.1
+  flutter_quill: ^11.5.0
+  flutter_quill_delta_from_html: ^1.4.1
+  vsc_quill_delta_to_html: ^1.0.5
   http: ^1.3.0
   idb_shim: ^2.6.5+1
   image: ^4.5.2
