--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,7 @@ dependencies:
   go_router: ^17.0.0
   google_fonts: ^6.2.1
   flutter_quill: ^11.5.0
-  flutter_quill_delta_from_html: ^1.4.1
-  vsc_quill_delta_to_html: ^1.0.5
+  html: ^0.15.5
   http: ^1.3.0
   idb_shim: ^2.6.5+1
   image: ^4.5.2
